# arg-services-llm

./: .gitignore  LICENSE  README.md  pyproject.toml
argmining/: server.py
argmining/entailment/: model.py
argmining/extraction/: create_servicer.py  model.py
argmining/graphconstruction/: model.py
argmining/majorclaim/: create_servicer.py  model.py
mining/: client.py  server.py
mining/entailment/: create_servicer.py  model.py
mining/extraction/: model.py
mining/graphconstruction/: create_servicer.py  model.py
mining/majorclaim/: model.py
quality/: server.py
ranking/: server.py
