[tool.poetry]
name = "arg-services-llm"
version = "0.1.0"
description = ""
authors = [
    "Mirko Lenz <mirko@mirkolenz.com>",
    "Kilian Bartz <s4kibart@uni-trier.de>",
    "Martin Hoppe",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arg-services = "^1.7"
arguebuf = "^2.5"
nltk = "^3.8"
openai = "^1.16"
pydantic = "^2.6"
spacy = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
